kubernetes/apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: ghcr.io/mandeepmails/homelab-code-server:85a82cd1aff6e736e8201216f52b4b5c23877f05
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: workspace
              mountPath: /workspace
      volumes:
        - name: config
          hostPath:
            path: /mnt/8000SAM1/8000/docker/development/code-server/config
            type: Directory
        - name: workspace
          hostPath:
            path: /mnt/8000SAM1/8000/docker/development/workspace
            type: Directory
