kubernetes/apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  type: ClusterIP
  selector:
    app: code-server
  ports:
    - name: http
      port: 8443
      targetPort: 8443
      protocol: TCP
